# japraq

./: .gitignore  CMakeLists.txt  README.md  defines.h  question.cpp  question.h  tree_node.h
projects/japraq_tester/: CMakeLists.txt  main.cpp  synaq.h
projects/japraq_tester/test_data/: test1.csv  test2.csv  test5.csv
source/: decision_tree_dataset.cpp  decision_tree_dataset.h  decision_tree_trainer.h  decisiont_tree_trainer.cpp  main.cpp  question.cpp  question.h  tree_node.h
source/common/: decision_tree_node.cpp  decision_tree_node.h  question.h  tree_node.cpp  tree_node.h
source/decision_tree_algorithm/: cart_algorithm.cpp  cart_algorithm.h  decision_tree_algorithm.h
source/decision_tree_dataset/: categorical_table_column.cpp  categorical_table_column.h  decision_tree_dataset.cpp  decision_tree_dataset.h  numerical_table_column.cpp  numerical_table_column.h  table.h  table_column.h  table_defines.h
source/decision_tree_trainer/: decision_tree_trainer.h  decisiont_tree_trainer.cpp
source/question/: categorical_question.cpp  categorical_question.h  numerical_question.cpp  numerical_question.h  question.h  question_factory.cpp  question_factory.h
src/: csv_ir.cpp  csv_ir.h  decision_tree_dataset.h  decision_tree_trainer.h  decisiont_tree_trainer.cpp  defines.h  dt.cpp  dt.h  dt_data_ir.cpp  dt_data_ir.h  question.cpp  question.h  tree_node.cpp  tree_node.h
test/: CMakeLists.txt  synaq.h  test_dt.cpp  test_runner.h
test/test_data/: test3.csv  test4.csv
